# Go_Game

./: .clang-format  .gitignore  CMakeLists.txt  Clang-Toolchain.cmake
benchmarks/: CMakeLists.txt
benchmarks/Board/: BoardBenchmarkStructure.h  CMakeLists.txt  CopyAssignBenchmark.cpp  CopyConstructionBenchmark.cpp  DefaultConstructionBenchmark.cpp  EqualOperatorBenchmark.cpp  MoveAssignBenchmark.cpp  MoveConstructionBenchmark.cpp  NotEqualOperatorBenchmark.cpp  RandomReadBenchmark.cpp  RandomWriteBenchmark.cpp  SerialReadBenchmark.cpp  SerialReadColumnMajorBenchmark.cpp  SerialReadRowMajorBenchmark.cpp  SerialWriteBenchmark.cpp  SerialWriteColumnMajorBenchmark.cpp  SerialWriteRowMajorBenchmark.cpp
src/: CMakeLists.txt
src/Board/: ArrayBoard.h  BitFieldBoard.h  Board.h  Dimension.h  MapBoard.h  TwoDimensionArrayBoard.h  UnorderedMapBoard.h
src/Board/Util/: BoardTransformation.h
src/ComputerPlayer/: CMakeLists.txt  RandomPlayer.h
src/ComputerPlayer/player/: mcts.h  player.h  random.h
src/GameEngine/: CMakeLists.txt  GameEngine.h
src/GameEngine/GameEngine/: GameEngine.h  StrassbourgEngine.h
src/GoTextProtocol/: CMakeLists.txt
src/GoTextProtocol/Commands/Administration/: KnownCommandCommand.h  ListCommandsCommand.h  NameCommand.h  ProtocolVersionCommand.h  QuitCommand.h  VersionCommand.h
src/GoTextProtocol/Commands/Base/: Command.cpp  Command.h  GTPStoneUtils.h  Move.h  StoneUtil.h  Vertex.h  Word.h
src/GoTextProtocol/Commands/Debug/: ShowBoardCommand.h
src/GoTextProtocol/Commands/Play/: GenMoveCommand.h  PlayCommand.h  UndoCommand.h
src/GoTextProtocol/Commands/Regression/: LoadSgfCommand.h  RegGenMoveCommand.h
src/GoTextProtocol/Commands/Setup/: BoardSizeCommand.h  ClearBoardCommand.h  FixedHandicapCommand.h  KomiCommand.h  PlaceFreeHandicapCommand.h  SetFreeHandicapCommand.h
src/GoTextProtocol/Commands/Tournament/: FinalScoreCommand.h  FinalStatusListCommand.h  TimeLeftCommand.h  TimeSettingsCommand.h
src/GoTextProtocol/Engine/: CMakeLists.txt  StrasbourgEngine.cpp  StrasbourgEngineConsole.cpp
src/GoTextProtocol/Engine/include/: StrasbourgEngine.h
src/GoTextProtocol/Util/: CommandExtractor.h  CommandParameterParser.h  Integer.h  WordExtractor.h
src/GoTextProtocol/include/GtpEngine/: Engine.h
src/Math/: ChiSquared.h  Random.h  Uniform_Int_Distribution.h
src/Rules/: Group.h  StrasbourgRules.h  territory_scoring.h
src/Stone/: Stone.h
src/Tournament/: CMakeLists.txt  Tournament.cpp
test/: CMakeLists.txt
test/Board/: ArrayBoardTest.cpp  BitFieldBoardTest.cpp  BoardTestStructure.h  CMakeLists.txt  MapBoardTest.cpp  TwoDimensionArrayBoardTest.cpp  UnorderedMapBoardTest.cpp
test/Board/Util/: BoardInversionTest.cpp  BoardRotationTest.cpp  BoardTransformationTest.cpp
test/GameEngine/: 02_Play.cpp  03_Point_of_play.cpp  05_Capture.cpp  06_Ko.cpp  09_EndOfGame.cpp  10_Determining_the_result.cpp  11_Resignation.cpp  CMakeLists.txt  GameEngineTest.h
test/GoTextProtocol/: CMakeLists.txt  CommandGeneratorTest.cpp  GTPPrinter.cpp
test/GoTextProtocol/Administration/: KnownCommandCommandTest.h  ListCommandsCommandTest.h  NameCommandTest.h  ProtocolVersionCommandTest.h  QuitCommandTest.h  VersionCommandTest.h
test/GoTextProtocol/Base/: CommandTest.h  MoveTest.h  StoneTest.h  VertexTest.h
test/GoTextProtocol/Commands/Administration/: NameCommandTest.h  ProtocolVersionCommandTest.h  QuitCommandTest.h
test/GoTextProtocol/Commands/Base/: MoveTest.h
test/GoTextProtocol/Commands/Debug/: ShowBoardCommandTest.h
test/GoTextProtocol/Commands/Play/: PlayCommandTest.h
test/GoTextProtocol/Commands/Regression/: LoadSgfCommandTest.h  RegGenMoveCommandTest.h
test/GoTextProtocol/Commands/Setup/: ClearBoardCommandTest.h  PlaceFreeHandicapCommandTest.h
test/GoTextProtocol/Commands/Tournament/: FinalScoreCommandTest.h  TimeLeftCommandTest.h
test/GoTextProtocol/Debug/: ShowBoardCommandTest.h
test/GoTextProtocol/Engine/: CMakeLists.txt  StrasbourgEngineTest.cpp
test/GoTextProtocol/Play/: GenMoveCommandTest.h  PlayCommandTest.h  UndoCommandTest.h
test/GoTextProtocol/Regression/: LoadSgfCommandTest.h  RegGenMoveCommandTest.h
test/GoTextProtocol/Setup/: BoardSizeCommandTest.h  ClearBoardCommandTest.h  FixedHandicapCommandTest.h  KomiCommandTest.h  PlaceFreeHandicapCommandTest.h  SetFreeHandicapCommandTest.h
test/GoTextProtocol/Tournament/: FinalScoreCommandTest.h  FinalStatusListCommandTest.h  TimeLeftCommandTest.h  TimeSettingsCommandTest.h
test/GoTextProtocol/Util/: CommandExtractorTest.cpp  CommandParameterParserTest.cpp  IntegerTest.cpp  WordExtractorTest.cpp
test/Math/: CMakeLists.txt  ChiSquaredTest.cpp  RandomTest.cpp
test/Rules/: CMakeLists.txt  GroupTest.cpp  Group_hasLiberty_Test.cpp  Group_positionHasLiberty_Test.cpp  Group_remove_Test.cpp  StrasbourgRulesTest.cpp  StrasbourgRulesTestStructure.h  territory_scoring_Test.cpp
test/Stone/: CMakeLists.txt  StoneTest.cpp
